--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/multer": "^1.4.5",
     "@types/uuid": "^8.3.0",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
