--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
+    "csv-parser": "^3.0.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "express": "^4.17.1",
     "multer": "^1.4.2",
+    "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/multer": "^1.4.5",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.0",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
